--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/slick.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/slick-theme.css' %}">
 
+    <style>
+    img{
+        object-fit: contain;
+    }
+</style>
+
 </head>
 
 <body>
@@ -68,9 +74,56 @@
             <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Categories</a>
-                        </li>
+
+                        <style>
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        min-width: 160px;
+        box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+        z-index: 1;
+        border-radius: 8px;
+        overflow: hidden;
+        opacity: 0;
+        transform: translateY(10px);
+        transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+        opacity: 1;
+        transform: translateY(0px);
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 10px 16px;
+        text-decoration: none;
+        display: block;
+        transition: background-color 0.2s ease;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+</style>
+
+<li class="nav-item dropdown">
+    <a class="nav-link" href="#">Categories</a>
+    <div class="dropdown-content">
+        {% for category in categories %}
+    <a href="{% url 'main:category' category.title %}">{{ category.title }}</a>
+{% endfor %}
+
+    </div>
+</li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'main:index' %}">Home</a>
                         </li>
@@ -101,10 +154,27 @@
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                         <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
                     </a>
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
-                    </a>
+
+                    {% if request.user.is_authenticated %}
+
+                <button type="button" class="btn  dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                  <img src="{{ request.user.avatar.url }}" width="35" height="35" class=" fa fa-fw fa-user text-dark mr-3" alt="">
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg">
+                  <li><a class="dropdown-item" href="#">Profile</a></li> <!-- url 'password_change'  >-->
+                  <li><a class="dropdown-item" href="#">Change password</a></li> <!-- url 'password_change'  >-->
+                  <li><a class="dropdown-item" href="">Logout</a></li><!-- url 'logout' >-->
+                </ul>
+
+                {% else %}
+                <a href="#" class="btn btn-primary">Login</a>  <!-- url 'login'  >-->
+                <a href="#" class="btn btn-primary">SignUp</a>  <!-- url 'users:signup' >-->
+                {% endif %}
+
+<!--                    <a class="nav-icon position-relative text-decoration-none" href="#">-->
+<!--                        <i class="fa fa-fw fa-user text-dark mr-3"></i>-->
+<!--                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>-->
+<!--                    </a>-->
                 </div>
             </div>
 
