--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -130,7 +130,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="{% url 'main:detail' %}">
+                        <a href="#">
                             <img src="{% static 'assets/img/feature_prod_01.jpg' %}" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -144,7 +144,7 @@
                                 </li>
                                 <li class="text-muted text-right">$240.00</li>
                             </ul>
-                            <a href="{% url 'main:detail' %}" class="h2 text-decoration-none text-dark">Gym Weight</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">Gym Weight</a>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in culpa qui officia deserunt.
                             </p>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="{% url 'main:detail' %}">
+                        <a href="#">
                             <img src="{% static 'assets/img/feature_prod_02.jpg' %}" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -168,7 +168,7 @@
                                 </li>
                                 <li class="text-muted text-right">$480.00</li>
                             </ul>
-                            <a href="{% url 'main:detail' %}" class="h2 text-decoration-none text-dark">Cloud Nike Shoes</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">Cloud Nike Shoes</a>
                             <p class="card-text">
                                 Aenean gravida dignissim finibus. Nullam ipsum diam, posuere vitae pharetra sed, commodo ullamcorper.
                             </p>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="{% url 'main:detail' %}">
+                        <a href="#">
                             <img src="{% static 'assets/img/feature_prod_03.jpg' %}" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -192,7 +192,7 @@
                                 </li>
                                 <li class="text-muted text-right">$360.00</li>
                             </ul>
-                            <a href="{% url 'main:detail' %}" class="h2 text-decoration-none text-dark">Summer Addides Shoes</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">Summer Addides Shoes</a>
                             <p class="card-text">
                                 Curabitur ac mi sit amet diam luctus porta. Phasellus pulvinar sagittis diam, et scelerisque ipsum lobortis nec.
                             </p>
