--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -115,15 +116,20 @@
 </style>
 
 <li class="nav-item dropdown">
-    <a class="nav-link" href="#">Categories</a>
-    <div class="dropdown-content">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Categories
+    </a>
+    <ul class="dropdown-menu">
         {% for category in categories %}
-    <a href="{% url 'main:category' category.title %}">{{ category.title }}</a>
-{% endfor %}
-
-    </div>
+            <li><a class="dropdown-item" href="{% url 'main:category' category.title %}">{{ category.title }}</a></li>
+        {% empty %}
+            <li><span class="dropdown-item">No categories found</span></li>
+        {% endfor %}
+    </ul>
 </li>
 
+
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'main:index' %}">Home</a>
                         </li>
