--- a/templates/main/category.html
+++ b/templates/main/category.html
@@ -1,36 +1,39 @@
 {% extends "base.html" %}
 
+{% load static %}  <!-- static fayllarini yuklash -->
+
 {% block title %}
-  E-Market - {{category}}
+  E-Market - {{ category }}
 {% endblock title %}
 
 {% block main %}
    <!-- Product Cart Start -->
    <div class="container">
-    <div class=" w-100 mt-4">
-        <h4 class="d-block" >Recently Products in {{category}}</h4>
+    <div class="w-100 mt-4">
+        <h4 class="d-block">Recently Products in {{ category }}</h4>
         <div class="d-flex flex-wrap justify-content-between">
             {% for product in products %}
-            <!-- Product Cart Start -->
-            <div class="card border border-0 shadow-sm d-inline-block m-1 mt-3" style="width: 16.5rem;" >
-                {% if product.productimage_set.exists %}
-                <a href="{% url 'main:detail' product.title %}">
-                <img height="200" class=" card-img-top" src="{{product.productimage_set.all.first.image.url}}" alt="">
-                    </a>
-                {% else %}
-                <img height="200" class=" card-img-top" src="images/14pro2.jfif" alt="">
-                {% endif %}
-                <div class="card-body">
-                    <h6 class="align-center card-title">{{product.title}}</h6>
-                    <span class="center card-text"><small>$ {{product.price}}</small></span>
-                    <div class="buttons d-flex flex-wrap justify-content-between ">
-                        <i class="bi bi-bookmark-fill"></i> 
+                <!-- Product Card Start -->
+                <div class="card border border-0 shadow-sm d-inline-block m-1 mt-3" style="width: 16.5rem;">
+                    {% if product.productimage_set.exists %}
+                        <a href="{% url 'main:detail' product.id %}">
+                            <img height="200" class="card-img-top" src="{{ product.productimage_set.all.first.image.url }}" alt="{{ product.title }}">
+                        </a>
+                    {% else %}
+                        <img height="200" class="card-img-top" src="{% static 'images/14pro2.jfif' %}" alt="default image">
+                    {% endif %}
+                    <div class="card-body">
+                        <h6 class="align-center card-title">
+                            <a href="{% url 'main:detail' product.id %}">{{ product.title }}</a>
+                        </h6>
+                        <span class="center card-text"><small>$ {{ product.price }}</small></span>
+                        <div class="buttons d-flex flex-wrap justify-content-between">
+                            <i class="bi bi-bookmark-fill"></i>
+                        </div>
                     </div>
                 </div>
-            </div>  
-            <!-- Product Cart End -->
+                <!-- Product Card End -->
             {% endfor %}
-            
         </div>
     </div>
 </div>
