app of users is ~ready

--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    E-Market - Contact
+{% endblock title %}
+
 {% block main %}
 
 {% load static %}
@@ -71,4 +75,4 @@
     </div>
     <!-- End Contact -->
 
-{% endblock %}
+{% endblock main %}
