--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    E-Market - Home
+{% endblock title %}
+
 {% block main %}
 
 {% load static %}
@@ -205,4 +209,4 @@
     </section>
     <!-- End Featured Product -->
 
-{% endblock %}
+{% endblock main %}
