--- a/templates/main/shop.html
+++ b/templates/main/shop.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    E-Market - Product Listing Page
+{% endblock title %}
+
 {% block main %} 
 
 {% load static %}
@@ -528,4 +532,4 @@
     </section>
     <!--End Brands-->
 
-{% endblock %}
+{% endblock main %}
