--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    E-Market - About Page
+{% endblock title %}
+
 {% block main %}
 
 {% load static %}
@@ -171,4 +175,4 @@
     </section>
     <!--End Brands-->
 
-    {% endblock %}
+    {% endblock main %}
