--- a/templates/main/category.html
+++ b/templates/main/category.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}
     E-Market - Category | {{ category.name }}
 {% endblock title %}
@@ -10,22 +10,20 @@
    <!-- Product Cart Start -->
    <div class="container">
     <div class=" w-100 mt-4">
-        <h4 class="d-block" >Recently Products in {{category}}</h4>
+        <h4 class="d-block" >Products in {{ category }}</h4>
         <div class="d-flex flex-wrap justify-content-between">
             {% for product in products %}
             <!-- Product Cart Start -->
             <div class="card border border-0 shadow-sm d-inline-block m-1 mt-3" style="width: 16.5rem;" >
-                {% if product.productimage_set.exists %}
-                <a href="{% url 'main:detail' product.title %}">
-                <img height="200" class=" card-img-top" src="{{product.productimage_set.all.first.image.url}}" alt="">
+                {% with product.images.all|first as image %}
+                    <a href="{% url 'main:detail' product.title %}">
+                        <img height="200" class=" card-img-top" src="{{ image.image.url }}" alt="">
                     </a>
-                {% else %}
-                <img height="200" class=" card-img-top" src="images/14pro2.jfif" alt="">
-                {% endif %}
+                {% endwith %}
                 <div class="card-body">
-                    <h6 class="align-center card-title">{{product.title}}</h6>
-                    <span class="center card-text"><small>$ {{product.price}}</small></span><br>
-                    <h7 class="align-center card-title">Seller: <a href="{% url 'users:profile' product.author.pk %}">{{product.author}}</a> </h7>
+                    <h6 class="align-center card-title">{{ product.title }}</h6>
+                    <span class="center card-text"><small>${{ product.price }}</small></span><br>
+                    <h7 class="align-center card-title">Seller: <a href="{% url 'users:profile' product.author.username %}">{{product.author}}</a> </h7>
 
                     <div class="buttons d-flex flex-wrap justify-content-between ">
                         <i class="bi bi-bookmark-fill"></i> 
