--- a/templates/main/new_product.html
+++ b/templates/main/new_product.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-{% block main %}
-  E-Market - Change Password
 
+{% block title %}
+  E-Market - Add New Product
+{% endblock title %}
+
+{% block main %}
   <div class="container">
     <div class="row">
         <div class="col"></div>
-        <div class="col-6 mt-5 ">
-            <h2>Change Password here</h2>
+        <div class="col-6 mt-5 mb-5">
+            <h2>Add New Product Here</h2>
             <form  method="post" >{% csrf_token %}
                 {{form|crispy}}
-                <button type="submit" class="btn btn-primary" >Submit</button>
-                <a href="{% url 'main:index' %}">Back to home</a>
+                <button type="submit" class="btn btn-primary" >Create</button>
             </form>
         </div>
         <div class="col"></div>
